[gd_scene load_steps=12 format=3 uid="uid://dwb2j4yxpjeoo"]

[ext_resource type="Texture2D" uid="uid://buwiyssv2nqp4" path="res://ASSETS/Art/SHOP/CyanSand.png" id="1_luwx1"]
[ext_resource type="Script" path="res://SCRIPTS/SHOP/bead_material.gd" id="1_q86yt"]
[ext_resource type="Script" path="res://RESOURCES/sand_material_info.gd" id="2_mkfsj"]
[ext_resource type="Script" path="res://SCRIPTS/SHOP/sand_body.gd" id="2_rvqh0"]
[ext_resource type="Texture2D" uid="uid://drt2n8e1dimyq" path="res://ASSETS/Art/SHOP/MagentaSand.png" id="3_0nc5c"]
[ext_resource type="Texture2D" uid="uid://cc228ds1xvnir" path="res://ASSETS/Art/SHOP/YellowSand.png" id="4_tw3rj"]
[ext_resource type="Texture2D" uid="uid://cfl7ltp72tqsp" path="res://ASSETS/Art/TERRARIUM/Pearl.png" id="5_kl75e"]
[ext_resource type="Texture2D" uid="uid://co18r5h02m8yl" path="res://ASSETS/Art/TERRARIUM/Snail.png" id="6_kwd0l"]
[ext_resource type="Texture2D" uid="uid://c0585iajy3qyf" path="res://ASSETS/Art/TERRARIUM/Jimmie.png" id="7_kjsgx"]

[sub_resource type="Resource" id="Resource_jeoaf"]
script = ExtResource("2_mkfsj")
color = 1

[sub_resource type="SpriteFrames" id="SpriteFrames_p3iw3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_luwx1")
}],
"loop": true,
"name": &"CYAN",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_0nc5c")
}],
"loop": true,
"name": &"MAGENTA",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_tw3rj")
}],
"loop": true,
"name": &"YELLOW",
"speed": 5.0
}]

[node name="BeadMaterial" type="StaticBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource("1_q86yt")
info = SubResource("Resource_jeoaf")

[node name="Bodies" type="Node2D" parent="."]

[node name="SandBody" type="Node2D" parent="Bodies"]
process_mode = 4
visible = false
script = ExtResource("2_rvqh0")

[node name="Sprites" type="AnimatedSprite2D" parent="Bodies/SandBody"]
position = Vector2(0, -41)
sprite_frames = SubResource("SpriteFrames_p3iw3")
animation = &"YELLOW"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Bodies/SandBody"]
position = Vector2(0, -41)
polygon = PackedVector2Array(-6, -9, -6, -8, -8, -8, -8, -7, -10, -7, -10, -6, -12, -6, -12, -5, -14, -5, -14, -4, -15, -4, -15, -3, -16, -3, -16, -2, -17, -2, -17, -1, -18, -1, -18, 0, -19, 0, -19, 1, -20, 1, -20, 2, -22, 2, -22, 4, -24, 4, -24, 5, -25, 5, -25, 6, -26, 6, -26, 8, -27, 8, -27, 9, -29, 9, -29, 10, -30, 10, -30, 11, -31, 11, -31, 12, -32, 12, -32, 13, -33, 13, -33, 15, -34, 15, -34, 16, -35, 16, -35, 17, -36, 17, -36, 19, -37, 19, -37, 21, -38, 21, -38, 23, -39, 23, -39, 26, -40, 26, -40, 28, -41, 28, -41, 30, -42, 30, -42, 32, -43, 32, -43, 34, -44, 34, -44, 36, -45, 36, -45, 38, -46, 38, -46, 40, -47, 40, -47, 41, -48, 41, -48, 42, -49, 42, -49, 44, -50, 44, -50, 45, -51, 45, -51, 46, -52, 46, -52, 47, -53, 47, -53, 49, -55, 49, -55, 50, -56, 50, -56, 51, -58, 51, -58, 52, -59, 52, -59, 53, -60, 53, -60, 54, -62, 54, -62, 55, -63, 55, -63, 56, -64, 56, -64, 57, -66, 57, -66, 58, -67, 58, -67, 59, -68, 59, -68, 60, -69, 60, -69, 61, -70, 61, -70, 62, -71, 62, -71, 63, -72, 63, -72, 64, -74, 64, -74, 66, -76, 66, -76, 69, -74, 69, -74, 70, -73, 70, -73, 71, -71, 71, -71, 72, -70, 72, -70, 73, -68, 73, -68, 74, -66, 74, -66, 75, -62, 75, -62, 76, -58, 76, -58, 77, -53, 77, -53, 78, -45, 78, -45, 79, -38, 79, -38, 80, -32, 80, -32, 81, -29, 81, -29, 82, -25, 82, -25, 83, -10, 83, -10, 84, -3, 84, -3, 85, 11, 85, 11, 84, 18, 84, 18, 83, 22, 83, 22, 82, 24, 82, 24, 81, 34, 81, 34, 80, 51, 80, 51, 79, 74, 79, 74, 78, 77, 78, 77, 77, 80, 77, 80, 76, 81, 76, 81, 75, 83, 75, 83, 72, 84, 72, 84, 68, 83, 68, 83, 67, 81, 67, 81, 66, 80, 66, 80, 65, 79, 65, 79, 64, 77, 64, 77, 63, 75, 63, 75, 62, 74, 62, 74, 61, 72, 61, 72, 60, 71, 60, 71, 59, 70, 59, 70, 58, 69, 58, 69, 57, 68, 57, 68, 55, 67, 55, 67, 54, 66, 54, 66, 53, 65, 53, 65, 52, 64, 52, 64, 51, 63, 51, 63, 49, 61, 49, 61, 48, 60, 48, 60, 47, 59, 47, 59, 46, 58, 46, 58, 45, 57, 45, 57, 44, 55, 44, 55, 43, 54, 43, 54, 42, 52, 42, 52, 40, 50, 40, 50, 39, 49, 39, 49, 38, 48, 38, 48, 37, 47, 37, 47, 36, 46, 36, 46, 35, 45, 35, 45, 33, 44, 33, 44, 32, 43, 32, 43, 31, 42, 31, 42, 30, 41, 30, 41, 29, 40, 29, 40, 27, 39, 27, 39, 26, 38, 26, 38, 25, 37, 25, 37, 23, 36, 23, 36, 21, 35, 21, 35, 20, 34, 20, 34, 19, 33, 19, 33, 18, 32, 18, 32, 16, 31, 16, 31, 15, 30, 15, 30, 13, 29, 13, 29, 12, 28, 12, 28, 11, 27, 11, 27, 9, 26, 9, 26, 8, 25, 8, 25, 6, 24, 6, 24, 4, 23, 4, 23, 2, 22, 2, 22, 1, 21, 1, 21, 0, 20, 0, 20, -1, 19, -1, 19, -2, 18, -2, 18, -3, 17, -3, 17, -4, 15, -4, 15, -5, 13, -5, 13, -6, 11, -6, 11, -7, 8, -7, 8, -8, 7, -8, 7, -9)

[node name="PearlBody" type="Node2D" parent="Bodies"]
process_mode = 4
visible = false

[node name="Sprite2D" type="Sprite2D" parent="Bodies/PearlBody"]
texture = ExtResource("5_kl75e")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Bodies/PearlBody"]
polygon = PackedVector2Array(-44, -27, -44, -26, -47, -26, -47, -25, -48, -25, -48, -24, -49, -24, -49, -23, -50, -23, -50, -22, -51, -22, -51, -21, -52, -21, -52, -18, -53, -18, -53, -11, -52, -11, -52, -8, -51, -8, -51, -7, -50, -7, -50, -6, -49, -6, -49, -5, -48, -5, -48, -4, -47, -4, -47, -3, -44, -3, -44, -2, -37, -2, -37, -3, -34, -3, -34, -4, -33, -4, -33, -5, -32, -5, -32, -6, -31, -6, -31, -7, -30, -7, -30, -8, -29, -8, -29, -11, -28, -11, -28, -18, -29, -18, -29, -21, -30, -21, -30, -22, -31, -22, -31, -23, -32, -23, -32, -24, -33, -24, -33, -25, -34, -25, -34, -26, -37, -26, -37, -27)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Bodies/PearlBody"]
polygon = PackedVector2Array(13, -27, 13, -26, 10, -26, 10, -25, 9, -25, 9, -24, 8, -24, 8, -23, 7, -23, 7, -22, 6, -22, 6, -21, 5, -21, 5, -18, 4, -18, 4, -11, 5, -11, 5, -8, 6, -8, 6, -7, 7, -7, 7, -6, 8, -6, 8, -5, 9, -5, 9, -4, 10, -4, 10, -3, 13, -3, 13, -2, 20, -2, 20, -3, 23, -3, 23, -4, 24, -4, 24, -5, 25, -5, 25, -6, 26, -6, 26, -7, 27, -7, 27, -8, 28, -8, 28, -11, 29, -11, 29, -18, 28, -18, 28, -21, 27, -21, 27, -22, 26, -22, 26, -23, 25, -23, 25, -24, 24, -24, 24, -25, 23, -25, 23, -26, 20, -26, 20, -27)

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Bodies/PearlBody"]
polygon = PackedVector2Array(37, 2, 37, 3, 34, 3, 34, 4, 33, 4, 33, 5, 32, 5, 32, 6, 31, 6, 31, 7, 30, 7, 30, 8, 29, 8, 29, 11, 28, 11, 28, 18, 29, 18, 29, 21, 30, 21, 30, 22, 31, 22, 31, 23, 32, 23, 32, 24, 33, 24, 33, 25, 34, 25, 34, 26, 37, 26, 37, 27, 44, 27, 44, 26, 47, 26, 47, 25, 48, 25, 48, 24, 49, 24, 49, 23, 50, 23, 50, 22, 51, 22, 51, 21, 52, 21, 52, 18, 53, 18, 53, 11, 52, 11, 52, 8, 51, 8, 51, 7, 50, 7, 50, 6, 49, 6, 49, 5, 48, 5, 48, 4, 47, 4, 47, 3, 44, 3, 44, 2)

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="Bodies/PearlBody"]
polygon = PackedVector2Array(-17, 3, -17, 4, -20, 4, -20, 5, -21, 5, -21, 6, -22, 6, -22, 7, -23, 7, -23, 8, -24, 8, -24, 9, -25, 9, -25, 12, -26, 12, -26, 19, -25, 19, -25, 22, -24, 22, -24, 23, -23, 23, -23, 24, -22, 24, -22, 25, -21, 25, -21, 26, -20, 26, -20, 27, -17, 27, -17, 28, -10, 28, -10, 27, -7, 27, -7, 26, -6, 26, -6, 25, -5, 25, -5, 24, -4, 24, -4, 23, -3, 23, -3, 22, -2, 22, -2, 19, -1, 19, -1, 12, -2, 12, -2, 9, -3, 9, -3, 8, -4, 8, -4, 7, -5, 7, -5, 6, -6, 6, -6, 5, -7, 5, -7, 4, -10, 4, -10, 3)

[node name="ShellBody" type="Node2D" parent="Bodies"]
process_mode = 4
visible = false

[node name="Sprite2D" type="Sprite2D" parent="Bodies/ShellBody"]
texture = ExtResource("6_kwd0l")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Bodies/ShellBody"]
polygon = PackedVector2Array(0, -30, 0, -29, -4, -29, -4, -28, -6, -28, -6, -27, -8, -27, -8, -26, -9, -26, -9, -25, -10, -25, -10, -24, -11, -24, -11, -23, -12, -23, -12, -20, -13, -20, -13, -16, -14, -16, -14, -13, -13, -13, -13, -9, -12, -9, -12, -7, -11, -7, -11, -5, -10, -5, -10, -4, -9, -4, -9, -3, -8, -3, -8, -2, -6, -2, -6, -1, -4, -1, -4, 0, 0, 0, 0, 1, 3, 1, 3, 0, 7, 0, 7, -1, 9, -1, 9, -2, 11, -2, 11, -3, 12, -3, 12, -4, 13, -4, 13, -5, 14, -5, 14, -7, 15, -7, 15, -9, 16, -9, 16, -13, 17, -13, 17, -18, 18, -18, 18, -22, 17, -22, 17, -24, 16, -24, 16, -26, 14, -26, 14, -27, 12, -27, 12, -28, 5, -28, 5, -29, 2, -29, 2, -30)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Bodies/ShellBody"]
polygon = PackedVector2Array(-42, -3, -42, -2, -46, -2, -46, -1, -48, -1, -48, 0, -50, 0, -50, 1, -51, 1, -51, 2, -52, 2, -52, 3, -53, 3, -53, 5, -54, 5, -54, 7, -55, 7, -55, 11, -56, 11, -56, 14, -55, 14, -55, 18, -54, 18, -54, 21, -53, 21, -53, 22, -52, 22, -52, 23, -51, 23, -51, 24, -50, 24, -50, 25, -48, 25, -48, 26, -46, 26, -46, 27, -42, 27, -42, 28, -40, 28, -40, 27, -37, 27, -37, 26, -30, 26, -30, 25, -28, 25, -28, 24, -26, 24, -26, 22, -25, 22, -25, 20, -24, 20, -24, 16, -25, 16, -25, 11, -26, 11, -26, 7, -27, 7, -27, 5, -28, 5, -28, 3, -29, 3, -29, 2, -30, 2, -30, 1, -31, 1, -31, 0, -33, 0, -33, -1, -35, -1, -35, -2, -39, -2, -39, -3)

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Bodies/ShellBody"]
polygon = PackedVector2Array(41, -3, 41, -2, 37, -2, 37, -1, 35, -1, 35, 0, 33, 0, 33, 1, 32, 1, 32, 2, 31, 2, 31, 3, 30, 3, 30, 5, 29, 5, 29, 7, 28, 7, 28, 11, 27, 11, 27, 16, 26, 16, 26, 20, 27, 20, 27, 22, 28, 22, 28, 24, 30, 24, 30, 25, 32, 25, 32, 26, 39, 26, 39, 27, 42, 27, 42, 28, 44, 28, 44, 27, 48, 27, 48, 26, 50, 26, 50, 25, 52, 25, 52, 24, 53, 24, 53, 23, 54, 23, 54, 22, 55, 22, 55, 21, 56, 21, 56, 18, 57, 18, 57, 14, 58, 14, 58, 11, 57, 11, 57, 7, 56, 7, 56, 5, 55, 5, 55, 3, 54, 3, 54, 2, 53, 2, 53, 1, 52, 1, 52, 0, 50, 0, 50, -1, 48, -1, 48, -2, 44, -2, 44, -3)

[node name="JimmieBody" type="Node2D" parent="Bodies"]
process_mode = 4
visible = false

[node name="Sprite2D" type="Sprite2D" parent="Bodies/JimmieBody"]
texture = ExtResource("7_kjsgx")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Bodies/JimmieBody"]
polygon = PackedVector2Array(-24, -27, -24, -26, -25, -26, -25, -25, -26, -25, -26, -24, -27, -24, -27, -23, -28, -23, -28, -22, -29, -22, -29, -21, -30, -21, -30, -20, -31, -20, -31, -19, -32, -19, -32, -18, -33, -18, -33, -17, -34, -17, -34, -16, -35, -16, -35, -15, -36, -15, -36, -14, -37, -14, -37, -13, -38, -13, -38, -12, -39, -12, -39, -11, -40, -11, -40, -10, -41, -10, -41, -9, -42, -9, -42, -8, -43, -8, -43, -7, -44, -7, -44, -6, -45, -6, -45, -5, -46, -5, -46, -4, -47, -4, -47, -3, -48, -3, -48, -2, -49, -2, -49, -1, -50, -1, -50, 0, -51, 0, -51, 1, -52, 1, -52, 2, -53, 2, -53, 3, -54, 3, -54, 4, -55, 4, -55, 5, -56, 5, -56, 6, -57, 6, -57, 7, -58, 7, -58, 8, -59, 8, -59, 9, -60, 9, -60, 10, -61, 10, -61, 11, -62, 11, -62, 12, -63, 12, -63, 13, -64, 13, -64, 14, -63, 14, -63, 15, -62, 15, -62, 16, -61, 16, -61, 17, -60, 17, -60, 18, -59, 18, -59, 17, -58, 17, -58, 16, -57, 16, -57, 15, -56, 15, -56, 14, -55, 14, -55, 13, -54, 13, -54, 12, -53, 12, -53, 11, -52, 11, -52, 10, -51, 10, -51, 9, -50, 9, -50, 8, -49, 8, -49, 7, -48, 7, -48, 6, -47, 6, -47, 5, -46, 5, -46, 4, -45, 4, -45, 3, -44, 3, -44, 2, -43, 2, -43, 1, -42, 1, -42, 0, -41, 0, -41, -1, -40, -1, -40, -2, -39, -2, -39, -3, -38, -3, -38, -4, -37, -4, -37, -5, -36, -5, -36, -6, -35, -6, -35, -7, -34, -7, -34, -8, -33, -8, -33, -9, -32, -9, -32, -10, -31, -10, -31, -11, -30, -11, -30, -12, -29, -12, -29, -13, -28, -13, -28, -14, -27, -14, -27, -15, -26, -15, -26, -16, -25, -16, -25, -17, -24, -17, -24, -18, -23, -18, -23, -19, -22, -19, -22, -20, -21, -20, -21, -21, -20, -21, -20, -22, -19, -22, -19, -23, -20, -23, -20, -24, -21, -24, -21, -25, -22, -25, -22, -26, -23, -26, -23, -27)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Bodies/JimmieBody"]
polygon = PackedVector2Array(-4, -27, -4, -26, -5, -26, -5, -25, -6, -25, -6, -24, -7, -24, -7, -23, -8, -23, -8, -22, -9, -22, -9, -21, -10, -21, -10, -20, -11, -20, -11, -19, -12, -19, -12, -18, -13, -18, -13, -17, -14, -17, -14, -16, -15, -16, -15, -15, -16, -15, -16, -14, -17, -14, -17, -13, -18, -13, -18, -12, -19, -12, -19, -11, -20, -11, -20, -10, -21, -10, -21, -9, -22, -9, -22, -8, -23, -8, -23, -7, -24, -7, -24, -6, -25, -6, -25, -5, -26, -5, -26, -4, -27, -4, -27, -3, -28, -3, -28, -2, -29, -2, -29, -1, -30, -1, -30, 0, -31, 0, -31, 1, -32, 1, -32, 2, -33, 2, -33, 3, -34, 3, -34, 4, -35, 4, -35, 5, -36, 5, -36, 6, -37, 6, -37, 7, -38, 7, -38, 8, -39, 8, -39, 9, -40, 9, -40, 10, -41, 10, -41, 11, -42, 11, -42, 12, -43, 12, -43, 13, -44, 13, -44, 14, -45, 14, -45, 15, -46, 15, -46, 16, -47, 16, -47, 17, -48, 17, -48, 18, -47, 18, -47, 19, -46, 19, -46, 20, -45, 20, -45, 21, -44, 21, -44, 22, -43, 22, -43, 21, -42, 21, -42, 20, -41, 20, -41, 19, -40, 19, -40, 18, -39, 18, -39, 17, -38, 17, -38, 16, -37, 16, -37, 15, -36, 15, -36, 14, -35, 14, -35, 13, -34, 13, -34, 12, -33, 12, -33, 11, -32, 11, -32, 10, -31, 10, -31, 9, -30, 9, -30, 8, -29, 8, -29, 7, -28, 7, -28, 6, -27, 6, -27, 5, -26, 5, -26, 4, -25, 4, -25, 3, -24, 3, -24, 2, -23, 2, -23, 1, -22, 1, -22, 0, -21, 0, -21, -1, -20, -1, -20, -2, -19, -2, -19, -3, -18, -3, -18, -4, -17, -4, -17, -5, -16, -5, -16, -6, -15, -6, -15, -7, -14, -7, -14, -8, -13, -8, -13, -9, -12, -9, -12, -10, -11, -10, -11, -11, -10, -11, -10, -12, -9, -12, -9, -13, -8, -13, -8, -14, -7, -14, -7, -15, -6, -15, -6, -16, -5, -16, -5, -17, -4, -17, -4, -18, -3, -18, -3, -19, -2, -19, -2, -20, -1, -20, -1, -21, 0, -21, 0, -22, 1, -22, 1, -23, 0, -23, 0, -24, -1, -24, -1, -25, -2, -25, -2, -26, -3, -26, -3, -27)

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Bodies/JimmieBody"]
polygon = PackedVector2Array(16, -27, 16, -26, 15, -26, 15, -25, 14, -25, 14, -24, 13, -24, 13, -23, 12, -23, 12, -22, 11, -22, 11, -21, 10, -21, 10, -20, 9, -20, 9, -19, 8, -19, 8, -18, 7, -18, 7, -17, 6, -17, 6, -16, 5, -16, 5, -15, 4, -15, 4, -14, 3, -14, 3, -13, 2, -13, 2, -12, 1, -12, 1, -11, 0, -11, 0, -10, -1, -10, -1, -9, -2, -9, -2, -8, -3, -8, -3, -7, -4, -7, -4, -6, -5, -6, -5, -5, -6, -5, -6, -4, -7, -4, -7, -3, -8, -3, -8, -2, -9, -2, -9, -1, -10, -1, -10, 0, -11, 0, -11, 1, -12, 1, -12, 2, -13, 2, -13, 3, -14, 3, -14, 4, -15, 4, -15, 5, -16, 5, -16, 6, -17, 6, -17, 7, -18, 7, -18, 8, -19, 8, -19, 9, -20, 9, -20, 10, -21, 10, -21, 11, -22, 11, -22, 12, -23, 12, -23, 13, -24, 13, -24, 14, -25, 14, -25, 15, -26, 15, -26, 16, -27, 16, -27, 17, -28, 17, -28, 18, -29, 18, -29, 19, -30, 19, -30, 20, -31, 20, -31, 21, -32, 21, -32, 22, -33, 22, -33, 23, -32, 23, -32, 24, -31, 24, -31, 25, -30, 25, -30, 26, -29, 26, -29, 27, -28, 27, -28, 26, -27, 26, -27, 25, -26, 25, -26, 24, -25, 24, -25, 23, -24, 23, -24, 22, -23, 22, -23, 21, -22, 21, -22, 20, -21, 20, -21, 19, -20, 19, -20, 18, -19, 18, -19, 17, -18, 17, -18, 16, -17, 16, -17, 15, -16, 15, -16, 14, -15, 14, -15, 13, -14, 13, -14, 12, -13, 12, -13, 11, -12, 11, -12, 10, -11, 10, -11, 9, -10, 9, -10, 8, -9, 8, -9, 7, -8, 7, -8, 6, -7, 6, -7, 5, -6, 5, -6, 4, -5, 4, -5, 3, -4, 3, -4, 2, -3, 2, -3, 1, -2, 1, -2, 0, -1, 0, -1, -1, 0, -1, 0, -2, 1, -2, 1, -3, 2, -3, 2, -4, 3, -4, 3, -5, 4, -5, 4, -6, 5, -6, 5, -7, 6, -7, 6, -8, 7, -8, 7, -9, 8, -9, 8, -10, 9, -10, 9, -11, 10, -11, 10, -12, 11, -12, 11, -13, 12, -13, 12, -14, 13, -14, 13, -15, 14, -15, 14, -16, 15, -16, 15, -17, 16, -17, 16, -18, 17, -18, 17, -19, 18, -19, 18, -20, 19, -20, 19, -21, 20, -21, 20, -22, 21, -22, 21, -23, 20, -23, 20, -24, 19, -24, 19, -25, 18, -25, 18, -26, 17, -26, 17, -27)

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="Bodies/JimmieBody"]
polygon = PackedVector2Array(39, -27, 39, -26, 38, -26, 38, -25, 37, -25, 37, -24, 36, -24, 36, -23, 35, -23, 35, -22, 34, -22, 34, -21, 33, -21, 33, -20, 32, -20, 32, -19, 31, -19, 31, -18, 30, -18, 30, -17, 29, -17, 29, -16, 28, -16, 28, -15, 27, -15, 27, -14, 26, -14, 26, -13, 25, -13, 25, -12, 24, -12, 24, -11, 23, -11, 23, -10, 22, -10, 22, -9, 21, -9, 21, -8, 20, -8, 20, -7, 19, -7, 19, -6, 18, -6, 18, -5, 17, -5, 17, -4, 16, -4, 16, -3, 15, -3, 15, -2, 14, -2, 14, -1, 13, -1, 13, 0, 12, 0, 12, 1, 11, 1, 11, 2, 10, 2, 10, 3, 9, 3, 9, 4, 8, 4, 8, 5, 7, 5, 7, 6, 6, 6, 6, 7, 5, 7, 5, 8, 4, 8, 4, 9, 3, 9, 3, 10, 2, 10, 2, 11, 1, 11, 1, 12, 0, 12, 0, 13, -1, 13, -1, 14, -2, 14, -2, 15, -3, 15, -3, 16, -4, 16, -4, 17, -5, 17, -5, 18, -6, 18, -6, 19, -7, 19, -7, 20, -8, 20, -8, 21, -9, 21, -9, 22, -10, 22, -10, 23, -9, 23, -9, 24, -8, 24, -8, 25, -7, 25, -7, 26, -6, 26, -6, 27, -5, 27, -5, 26, -4, 26, -4, 25, -3, 25, -3, 24, -2, 24, -2, 23, -1, 23, -1, 22, 0, 22, 0, 21, 1, 21, 1, 20, 2, 20, 2, 19, 3, 19, 3, 18, 4, 18, 4, 17, 5, 17, 5, 16, 6, 16, 6, 15, 7, 15, 7, 14, 8, 14, 8, 13, 9, 13, 9, 12, 10, 12, 10, 11, 11, 11, 11, 10, 12, 10, 12, 9, 13, 9, 13, 8, 14, 8, 14, 7, 15, 7, 15, 6, 16, 6, 16, 5, 17, 5, 17, 4, 18, 4, 18, 3, 19, 3, 19, 2, 20, 2, 20, 1, 21, 1, 21, 0, 22, 0, 22, -1, 23, -1, 23, -2, 24, -2, 24, -3, 25, -3, 25, -4, 26, -4, 26, -5, 27, -5, 27, -6, 28, -6, 28, -7, 29, -7, 29, -8, 30, -8, 30, -9, 31, -9, 31, -10, 32, -10, 32, -11, 33, -11, 33, -12, 34, -12, 34, -13, 35, -13, 35, -14, 36, -14, 36, -15, 37, -15, 37, -16, 38, -16, 38, -17, 39, -17, 39, -18, 40, -18, 40, -19, 41, -19, 41, -20, 42, -20, 42, -21, 43, -21, 43, -22, 44, -22, 44, -23, 43, -23, 43, -24, 42, -24, 42, -25, 41, -25, 41, -26, 40, -26, 40, -27)

[node name="CollisionPolygon2D5" type="CollisionPolygon2D" parent="Bodies/JimmieBody"]
polygon = PackedVector2Array(58, -26, 58, -25, 57, -25, 57, -24, 56, -24, 56, -23, 55, -23, 55, -22, 54, -22, 54, -21, 53, -21, 53, -20, 52, -20, 52, -19, 51, -19, 51, -18, 50, -18, 50, -17, 49, -17, 49, -16, 48, -16, 48, -15, 47, -15, 47, -14, 46, -14, 46, -13, 45, -13, 45, -12, 44, -12, 44, -11, 43, -11, 43, -10, 42, -10, 42, -9, 41, -9, 41, -8, 40, -8, 40, -7, 39, -7, 39, -6, 38, -6, 38, -5, 37, -5, 37, -4, 36, -4, 36, -3, 35, -3, 35, -2, 34, -2, 34, -1, 33, -1, 33, 0, 32, 0, 32, 1, 31, 1, 31, 2, 30, 2, 30, 3, 29, 3, 29, 4, 28, 4, 28, 5, 27, 5, 27, 6, 26, 6, 26, 7, 25, 7, 25, 8, 24, 8, 24, 9, 23, 9, 23, 10, 22, 10, 22, 11, 21, 11, 21, 12, 20, 12, 20, 13, 19, 13, 19, 14, 18, 14, 18, 15, 17, 15, 17, 16, 16, 16, 16, 17, 15, 17, 15, 18, 14, 18, 14, 19, 13, 19, 13, 20, 12, 20, 12, 21, 11, 21, 11, 22, 10, 22, 10, 23, 9, 23, 9, 24, 8, 24, 8, 25, 9, 25, 9, 26, 10, 26, 10, 27, 11, 27, 11, 28, 12, 28, 12, 29, 13, 29, 13, 28, 14, 28, 14, 27, 15, 27, 15, 26, 16, 26, 16, 25, 17, 25, 17, 24, 18, 24, 18, 23, 19, 23, 19, 22, 20, 22, 20, 21, 21, 21, 21, 20, 22, 20, 22, 19, 23, 19, 23, 18, 24, 18, 24, 17, 25, 17, 25, 16, 26, 16, 26, 15, 27, 15, 27, 14, 28, 14, 28, 13, 29, 13, 29, 12, 30, 12, 30, 11, 31, 11, 31, 10, 32, 10, 32, 9, 33, 9, 33, 8, 34, 8, 34, 7, 35, 7, 35, 6, 36, 6, 36, 5, 37, 5, 37, 4, 38, 4, 38, 3, 39, 3, 39, 2, 40, 2, 40, 1, 41, 1, 41, 0, 42, 0, 42, -1, 43, -1, 43, -2, 44, -2, 44, -3, 45, -3, 45, -4, 46, -4, 46, -5, 47, -5, 47, -6, 48, -6, 48, -7, 49, -7, 49, -8, 50, -8, 50, -9, 51, -9, 51, -10, 52, -10, 52, -11, 53, -11, 53, -12, 54, -12, 54, -13, 55, -13, 55, -14, 56, -14, 56, -15, 57, -15, 57, -16, 58, -16, 58, -17, 59, -17, 59, -18, 60, -18, 60, -19, 61, -19, 61, -20, 62, -20, 62, -21, 63, -21, 63, -22, 62, -22, 62, -23, 61, -23, 61, -24, 60, -24, 60, -25, 59, -25, 59, -26)
